<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/tagTypeRadioGroup"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/languageTypeRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/tokenRadioButton"
            android:layout_width="83dp"
            android:layout_height="35dp"
            android:text="@string/token"
            android:checked="true"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/arRadioButton"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

        <RadioButton
            android:id="@+id/cardRadioButton"
            android:layout_width="83dp"
            android:layout_height="35dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:text="@string/card"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/languageTypeRadioGroup"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/frRadioButton"
            android:layout_width="83dp"
            android:layout_height="35dp"
            android:text="@string/fr"
            android:checked="true"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/arRadioButton"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

        <RadioButton
            android:id="@+id/arRadioButton"
            android:layout_width="83dp"
            android:layout_height="35dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:text="@string/ar"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="95dp"
        android:background="@drawable/textview_border"
        android:padding="5dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/taxiora_nfc_tag_scanner"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tagTypeRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/taxiora_logo_round" />


</androidx.constraintlayout.widget.ConstraintLayout>

